--- a/about us/about us.css
+++ b/about us/about us.css
@@ -1,76 +1,85 @@
-body{
-    margin: 0px;
+body {
+  margin: 0px;
 }
+
 /* 設定absolute讓位置不因網頁縮小而移動 */
-.container{
-    position: absolute;
+.container {
+  position: absolute;
 }
-.background_image{
-    width: 100%;
-    
+
+.background_image {
+  width: 100%;
+
 }
 
 
 /* 設定find_now的位置 長度用%也是防止移位*/
-.find_now{
-    position: absolute;
-    top: 20%;
-    left: 16%;
-    width: 18%;
-    height: 15%;
-    z-index: 2;
+.find_now {
+  position: absolute;
+  top: 20%;
+  left: 16%;
+  width: 18%;
+  height: 15%;
+  z-index: 2;
 }
+
 /* 人物(矮)的位置，由左至右*/
-.short_1{
-    position: absolute;
-    top: 72.5%;
-    left: 0.1%;
-    width: 18%;
-    height: 10%;
-    z-index: 2;
+.short_1 {
+  position: absolute;
+  top: 72.5%;
+  left: 0.1%;
+  width: 18%;
+  height: 10%;
+  z-index: 2;
 }
-.short_2{
+
+.short_2 {
   position: absolute;
   top: 72.5%;
   left: 18%;
   width: 15%;
-  height:10%;
+  height: 10%;
   z-index: 2;
 }
-.short_3{
+
+.short_3 {
   position: absolute;
   top: 70.5%;
   left: 34%;
   width: 15%;
-  height:12%;
+  height: 12%;
   z-index: 2;
 }
-.short_4{
+
+.short_4 {
   position: absolute;
   top: 73.5%;
   left: 50%;
-  width:15%;
+  width: 15%;
   height: 9%;
   z-index: 2;
 }
-.short_5{
+
+.short_5 {
   position: absolute;
   top: 72.5%;
   left: 65.5%;
-  width:16%;
-  height:10%;
+  width: 16%;
+  height: 10%;
   z-index: 2;
 }
-.short_6{
+
+.short_6 {
   position: absolute;
   top: 72.5%;
   left: 81%;
   width: 18.5%;
   height: 10%;
-  z-index:2;
+  z-index: 2;
 }
+
 /* 人物(高)的位置 */
-.tall_1{
+.tall_1 {
   position: absolute;
   top: 67.5%;
   left: 3%;
@@ -78,7 +87,8 @@ body{
   height: 15%;
   z-index: 2;
 }
-.tall_2{
+
+.tall_2 {
   position: absolute;
   top: 67.5%;
   left: 19%;
@@ -86,7 +96,8 @@ body{
   height: 15%;
   z-index: 2;
 }
-.tall_3{
+
+.tall_3 {
   position: absolute;
   top: 67.5%;
   left: 35%;
@@ -94,15 +105,17 @@ body{
   height: 15%;
   z-index: 2;
 }
-.tall_4{
+
+.tall_4 {
   position: absolute;
-  top:67.5%;
-  left:50.5%;
+  top: 67.5%;
+  left: 50.5%;
   width: 14%;
   height: 15%;
   z-index: 2;
 }
-.tall_5{
+
+.tall_5 {
   position: absolute;
   top: 67.5%;
   left: 67.5%;
@@ -110,7 +123,8 @@ body{
   height: 15%;
   z-index: 2;
 }
-.tall_6{
+
+.tall_6 {
   position: absolute;
   top: 67.5%;
   left: 83.5%;
@@ -118,75 +132,84 @@ body{
   height: 15%;
   z-index: 2;
 }
+
 /* 上面自介區域的位置 */
-.genius_1{
+.genius_1 {
   position: absolute;
   top: 57.5%;
-  left:1.5% ;
-  /* width: 15%;
-  height: 14%; */
-}
-.genius_2{
-  position: absolute;
-  top: 57.5%;
-  left:17.5% ;
-  /* width: 15%;
-  height: 14%; */
-}
-.genius_3{
-  position: absolute;
-  top: 57.5%;
-  left:33.5% ;
-  /* width: 15%;
-  height: 14%; */
-}
-.genius_4{
-  position: absolute;
-  top: 57.5%;
-  left:49.5% ;
-  /* width: 15%;
-  height: 14%; */
-}
-.genius_5{
-  position: absolute;
-  top: 57.5%;
-  left:65.5% ;
-  /* width: 15%;
-  height: 14%; */
-}
-.genius_6{
-  position: absolute;
-  top: 57.5%;
-  left:81.5% ;
+  left: 1.5%;
   /* width: 15%;
   height: 14%; */
 }
 
-.self_1{
+.genius_2 {
+  position: absolute;
+  top: 57.5%;
+  left: 17.5%;
+  /* width: 15%;
+  height: 14%; */
+}
+
+.genius_3 {
+  position: absolute;
+  top: 57.5%;
+  left: 33.5%;
+  /* width: 15%;
+  height: 14%; */
+}
+
+.genius_4 {
+  position: absolute;
+  top: 57.5%;
+  left: 49.5%;
+  /* width: 15%;
+  height: 14%; */
+}
+
+.genius_5 {
+  position: absolute;
+  top: 57.5%;
+  left: 65.5%;
+  /* width: 15%;
+  height: 14%; */
+}
+
+.genius_6 {
+  position: absolute;
+  top: 57.5%;
+  left: 81.5%;
+  /* width: 15%;
+  height: 14%; */
+}
+
+.self_1 {
   position: absolute;
   top: 57.3%;
-  left:1.4% ;
+  left: 1.4%;
   width: 15%;
   height: 13%;
 }
-.self_2{
+
+.self_2 {
   position: absolute;
   top: 57.3%;
-  left:16% ;
+  left: 16%;
   width: 17.5%;
   height: 12.5%;
 }
-.self_3{
+
+.self_3 {
   position: absolute;
   top: 57.3%;
-  left:33.5% ;
+  left: 33.5%;
   width: 15%;
   height: 12.5%;
 }
-.self_4{
+
+.self_4 {
   position: absolute;
   top: 57.3%;
-  left: 47.5% ;
+  left: 47.5%;
   width: 16%;
   height: 12.5%;
 }
@@ -196,91 +219,135 @@ body{
 
 
 /* 箭頭的位置 */
-.arrow_1{
+.arrow_1 {
   position: absolute;
   top: 54%;
   left: 6.5%;
-  width:5%;
-  height:3%;
+  width: 5%;
+  height: 3%;
 }
-.arrow_2{
+
+.arrow_2 {
   position: absolute;
   top: 54%;
   left: 22.5%;
-  width:5%;
-  height:3%;
+  width: 5%;
+  height: 3%;
 }
-.arrow_3{
+
+.arrow_3 {
   position: absolute;
   top: 54%;
   left: 38.5%;
-  width:5%;
-  height:3%;
+  width: 5%;
+  height: 3%;
 }
-.arrow_4{
+
+.arrow_4 {
   position: absolute;
   top: 54%;
   left: 54.5%;
-  width:5%;
-  height:3%;
+  width: 5%;
+  height: 3%;
 }
-.arrow_5{
+
+.arrow_5 {
   position: absolute;
   top: 54%;
   left: 70.5%;
-  width:5%;
-  height:3%;
+  width: 5%;
+  height: 3%;
 }
-.arrow_6{
+
+.arrow_6 {
   position: absolute;
   top: 54%;
   left: 86.5%;
-  width:5%;
-  height:3%;
+  width: 5%;
+  height: 3%;
 }
 
 /* 名字 */
-.name_1{
+.name_1 {
   position: absolute;
   top: 84%;
   left: 3.3%;
   width: 11.25%;
   height: 5.75%;
 }
-.name_2{
+
+.name_2 {
   position: absolute;
   top: 84%;
   left: 19.5%;
   width: 11.25%;
   height: 5.75%;
 }
-.name_3{
+
+.name_3 {
   position: absolute;
   top: 84%;
   left: 35.7%;
   width: 11.25%;
   height: 5.75%;
 }
-.name_4{
+
+.name_4 {
   position: absolute;
   top: 84%;
   left: 51.9%;
   width: 11.25%;
   height: 5.75%;
 }
-.name_5{
+
+.name_5 {
   position: absolute;
   top: 84%;
   left: 68.1%;
   width: 11.25%;
   height: 5.75%;
 }
-.name_6{
+
+.name_6 {
   position: absolute;
   top: 84%;
   left: 84.2%;
   width: 11.25%;
   height: 5.75%;
 }
+
+#myBtn {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Fixed/sticky position */
+  bottom: 20px;
+  /* Place the button at the bottom of the page */
+  right: 30px;
+  /* Place the button 30px from the right */
+  z-index: 99;
+  /* Make sure it does not overlap */
+  border: none;
+  /* Remove borders */
+  outline: none;
+  /* Remove outline */
+  background-color: inherit;
+  /* Set a background color */
+  color: inherit;
+  /* Text color */
+  cursor: pointer;
+  /* Add a mouse pointer on hover */
+  padding: 15px;
+  /* Some padding */
+  border-radius: 10px;
+  /* Rounded corners */
+  font-size: 18px;
+  /* Increase font size */
+}
+
+/* 
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover 
+} */
 
 /* hihi from mark */
